--- a/assets/css/pages/groups/sections/header.css
+++ b/assets/css/pages/groups/sections/header.css
@@ -15,3 +15,8 @@
 .group-header .group-name {
     font-size: 200%;
 }
+
+.group-header .col-info .fa {
+    margin-right: 10px;
+    width: 10px;
+}
