Send request to update group settings.

--- a/assets/css/pages/groups/pages/settings.css
+++ b/assets/css/pages/groups/pages/settings.css
@@ -14,3 +14,7 @@
     text-align: center;
     margin-bottom: 15px;
 }
+
+.group-settings-container .submit-button-container {
+    text-align: center;
+}
