Can send a request on the API to delete group logo.

--- a/assets/css/pages/groups/pages/settings.css
+++ b/assets/css/pages/groups/pages/settings.css
@@ -27,5 +27,6 @@
 .group-settings-container .group-logo-settings-img {
     width: 150px;
     margin: auto;
+    margin-bottom: 10px;
     display: block;
 }
