--- a/assets/css/pages/groups/pages/settings.css
+++ b/assets/css/pages/groups/pages/settings.css
@@ -15,6 +15,12 @@
     margin-bottom: 15px;
 }
 
+.group-settings-container .separated-block {
+    margin-top: 25px;
+    margin-bottom: 30px;
+    display: block;
+}
+
 .group-settings-container .submit-button-container {
     text-align: center;
 }
