--- a/assets/css/pages/groups/sections/header.css
+++ b/assets/css/pages/groups/sections/header.css
@@ -13,6 +13,10 @@
     font-size: 200%;
 }
 
+.group-header .group-tag {
+    color: #6f737b;
+}
+
 .group-header .col-info .fa {
     margin-right: 10px;
     width: 10px;
