--- a/assets/css/pages/groups/sections/header.css
+++ b/assets/css/pages/groups/sections/header.css
@@ -17,7 +17,8 @@
     color: #6f737b;
 }
 
-.group-header .col-info .fa {
+.group-header .col-info .fa,
+.group-header .col-metadata .fa {
     margin-right: 10px;
     width: 10px;
 }
