Add a notice when the user does not belong to any group.

--- a/assets/css/pages/groups/pages/main.css
+++ b/assets/css/pages/groups/pages/main.css
@@ -11,6 +11,11 @@
     padding-top: 50px;
 }
 
+.groups-main-page .no-group-notice {
+    margin-top: 10px;
+    text-align: center;
+}
+
 .groups-main-page .group-item {
     text-align: justify;
     margin-top: 10px;
