--- a/assets/zip/personnal-data-export-navigator/assets/css/main.css
+++ b/assets/zip/personnal-data-export-navigator/assets/css/main.css
@@ -4,7 +4,9 @@
  * @author Pierre HUBERT
  */
 
-
+/**
+ * Global rules
+ */
 .sidenav.sidenav-fixed {
 	/*transform: unset;*/
 	/*margin-top: 80px;*/
@@ -16,4 +18,24 @@ main {
 
 main .container {
 	display: none;
+}
+
+h1 {
+	font-size: 150%;
+}
+
+
+/**
+ * User information rules
+ */
+.user-information-table td:first-child {
+	font-weight: bold;
+}
+
+.account-image {
+	width: 50px;
+}
+
+.background-image {
+	max-width: 100px;
 }
