--- a/assets/css/components/calls/callWindow.css
+++ b/assets/css/components/calls/callWindow.css
@@ -13,23 +13,12 @@
 	right: 10px;
 	z-index: 100;
 	border: 1px black solid;
+	display: flex;
+	flex-direction: column;
 }
 
-
-/**
- * Loading message
- */
-.loading-message-container {
-	position: absolute;
-	height: inherit;
-	width: inherit;
-	display: flex;
-	background: 1px #0009;
-	flex-direction: column;
-	justify-content: space-around;
-	text-align: center;
-	font-size: 150%;
-	color: white;
+.call.window.body {
+	flex: 1;
 }
 
 
@@ -51,4 +40,21 @@
 
 .call-title {
 	flex: 1;
+}
+
+
+/**
+ * Loading message
+ */
+ .loading-message-container {
+	position: absolute;
+	min-height: 110px;
+	width: 100%;
+	display: flex;
+	background: 1px #0009;
+	flex-direction: column;
+	justify-content: space-around;
+	text-align: center;
+	font-size: 150%;
+	color: white;
 }
