--- a/assets/css/components/calls/callWindow.css
+++ b/assets/css/components/calls/callWindow.css
@@ -4,10 +4,19 @@
  * @author Pierre HUBERT
  */
 
-.call-window {
-	background-color: white;
-	width: 300px;
+#callsTarget {
 	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	visibility: hidden;
+	z-index: 1000;
+}
+
+
+.call-window {
+	width: 300px;
+	position: absolute;
 	top: 100px;
 	right: 10px;
 	z-index: 100;
@@ -15,6 +24,7 @@
 	display: flex;
 	flex-direction: column;
 	background-color: #000000b3;
+	visibility: visible;
 }
 
 .call.window.body {
